# schmagent

./: .env  .env.example  .gitignore  .pylintrc  README.md  fix_api_keys.sh  migrate_api_keys.sh  mypy.ini  pyproject.toml  pyrightconfig.json  requirements.txt  run.py  run.sh  run_unified.sh  set_api_key.sh  setup_schmagent.sh  setup_venv.sh
schmagent/: __main__.py  main.py
schmagent/models/: chat_model.py  openai.py
schmagent/ui/: clipboard.py  window.py
schmagent/utils/: config.py
stubs/gi/: __init__.pyi  repository.pyi
