[build-system]
requires = ["setuptools>=68.0.0", "wheel>=0.40.0"]
build-backend = "setuptools.build_meta"

[project]
name = "schmagent"
version = "0.1.0"
description = "Schmagent - A GTK-based chat application"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    # Core dependencies
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "aiohttp>=3.9.0",
    "asyncio>=3.4.3",
    # AI providers
    "openai>=1.12.0",
    "anthropic>=0.8.0",
    "google-generativeai>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pylint>=3.0.0",
    "mypy>=1.7.0",
    "black>=23.11.0",
    "isort>=5.12.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools]
packages = ["schmagent", "stubs"]

[tool.setuptools.package-data]
stubs = ["**/*.pyi", "**/py.typed"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
strict_optional = true

[[tool.mypy.overrides]]
module = ["gi.*"]
ignore_missing_imports = true

[tool.pylint.messages_control]
disable = [
    "import-error",
    "no-name-in-module",
]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.isort]
profile = "black"
line_length = 100
